backend/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gosmartkickers
spec:
  type: LoadBalancer
  selector:
    app: gosmartkickers
  ports:
    - port: 3000
      targetPort: 3000
